tests/build/cases/widget_new/unknown_property1.rs
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        unknown = 0;
    };
}
